--- a/app/src/main/res/layout/app_intro_activity.xml
+++ b/app/src/main/res/layout/app_intro_activity.xml
@@ -1,7 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.viewpager.widget.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.appintro.AppIntroActivity" />
+    android:background="@color/colorAccent">
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/indicator"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="@dimen/onboard_margin"
+            android:layout_marginTop="@dimen/onboard_margin_top"
+            android:layout_marginEnd="@dimen/onboard_margin"
+            android:layout_marginBottom="@dimen/onboard_margin"
+            android:background="@drawable/onboarding_message_bg"
+            tools:context=".ui.appintro.AppIntroActivity" />
+
+        <com.shuhart.bubblepagerindicator.BubblePageIndicator
+            android:id="@+id/indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/btn_next"
+            android:layout_centerHorizontal="true"
+            app:bpi_fillColor="@color/black"
+            app:bpi_marginBetweenCircles="3dp"
+            app:bpi_onSurfaceCount="@integer/default_bubble_indicator_on_surface_count"
+            app:bpi_pageColor="@color/white"
+            app:bpi_radius="4dp"
+            app:bpi_risingCount="@integer/default_bubble_indicator_rising_count" />
+
+        <TextView
+            android:id="@+id/btn_next"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="@dimen/onboard_margin"
+            android:background="@drawable/app_button_bg"
+            android:gravity="center"
+            android:padding="12dp"
+            android:text="@string/next_str"
+            android:textColor="#FFFFFF" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/onboard_margin"
+            android:src="@drawable/coins" />
+    </RelativeLayout>
+
+
+</RelativeLayout>
