--- a/app/src/main/res/layout/app_intro_fragment.xml
+++ b/app/src/main/res/layout/app_intro_fragment.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#ff007c"
-    tools:context=".ui.appintro.AppIntroFragment">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/message"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="32dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginEnd="76dp"
         android:background="#FFFFFF"
-        android:gravity="center"
+        android:gravity="left|bottom"
         android:padding="16dp"
-        android:text="MainFragment"
-        android:textSize="28sp" />
+        android:text="अब बैंक शाखा में जाने की आवश्यकता नहीं है। किसी भी बैंकिंग पासवर्ड या एटीएम पिन के बिना अपने बचत खाते के लेन-देन की जाँच करें।"
+        android:textColor="@color/black"
+        android:textSize="22sp"
+        android:textStyle="normal" />
+</RelativeLayout>
 
-</LinearLayout>
