--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context=".ui.splash.SplashActivity">
 
 
@@ -11,15 +12,11 @@
         android:id="@+id/splash_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="183dp"
         android:src="@drawable/ic_launcher_foreground" />
 
     <com.alfinapp.ui.views.fontTextView.LatoHeavyTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/splash_iv"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="13.1dp"
         android:gravity="center"
         android:lineSpacingExtra="7sp"
@@ -27,4 +24,4 @@
         android:textColor="#d9000000"
         android:textSize="20sp" />
 
-</RelativeLayout>
+</LinearLayout>
