--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -122,7 +122,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="10dp"
+                    android:layout_height="6dp"
                     android:layout_marginStart="18dp"
                     android:layout_marginEnd="18dp"
                     android:background="@drawable/dotted_line" />
@@ -137,12 +137,11 @@
                     android:textColor="#000000"
                     android:textSize="18sp" />
 
-                <androidx.viewpager.widget.ViewPager
+                <com.alfinapp.ui.views.WrapContentHeightViewPager
                     android:id="@+id/item_pager"
                     android:layout_width="match_parent"
-                    android:layout_height="400dp"
-                    android:layout_marginTop="24dp"
-                    tools:visibility="visible" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp" />
 
                 <com.shuhart.bubblepagerindicator.BubblePageIndicator
                     android:id="@+id/indicator"
