--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     tools:context=".ui.home.profile.ProfileFragment">
 
-    <include layout="@layout/toolbar_layout" />
+    <include layout="@layout/profile_toolbar_layout" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -17,168 +17,223 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:background="@drawable/profile_bg"
-                android:orientation="vertical"
-                android:paddingStart="20dp">
+                android:layout_height="180dp">
 
-                <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
-                    android:id="@+id/username_text_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="52dp"
-                    android:text="Pankaj Sharma"
-                    android:textColor="#000000"
-                    android:textSize="20sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:background="@drawable/profile_bg"
+                    android:orientation="vertical"
+                    android:paddingStart="20dp">
+
+                    <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
+                        android:id="@+id/username_text_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="52dp"
+                        android:text="Pankaj Sharma"
+                        android:textColor="#000000"
+                        android:textSize="20sp" />
+
+                    <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
+                        android:id="@+id/userphone_text_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:text="90674 2378"
+                        android:textColor="#000000"
+                        android:textSize="14sp" />
+
+                    <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
+                        android:id="@+id/useremail_text_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:text="pankaj.masa@gmail.com"
+                        android:textColor="#000000"
+                        android:textSize="14sp" />
+
+
+                </LinearLayout>
+
+                <RelativeLayout
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginEnd="20dp">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:backgroundTint="@color/white"
+                        android:contentDescription="@string/content_desc"
+                        android:src="@drawable/ic_user" />
+
+                    <ImageView
+                        android:layout_width="18dp"
+                        android:layout_height="18dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:background="#3fadff"
+                        android:contentDescription="@string/content_desc"
+                        android:src="@drawable/ic_profile_pic" />
+                </RelativeLayout>
+            </RelativeLayout>
+
+
+            <LinearLayout
+                android:id="@+id/address_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
-                    android:id="@+id/userphone_text_view"
+                    android:text="@string/address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="21dp"
+                    android:paddingStart="21dp"
+                    android:textColor="#000000"
+                    android:textSize="14sp" />
+
+                <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:text="90674 2378"
-                    android:textColor="#000000"
-                    android:textSize="14sp" />
+                    android:layout_marginBottom="21dp"
+                    android:paddingStart="21dp"
 
-                <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
-                    android:id="@+id/useremail_text_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text="pankaj.masa@gmail.com"
-                    android:textColor="#000000"
+                    android:text="Outer Ring Road"
+                    android:textColor="#a9a9a9"
                     android:textSize="14sp" />
             </LinearLayout>
 
-            <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:paddingStart="21dp"
-                android:text="@string/address"
-                android:textColor="#000000"
-                android:textSize="14sp" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginStart="21dp"
+                android:layout_marginEnd="21dp"
+                android:background="#eeeeee" />
 
-            <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:paddingStart="21dp"
-                android:text="Outer Ring Road"
-                android:textColor="#a9a9a9"
-                android:textSize="14sp" />
+            <LinearLayout
+                android:id="@+id/terms_and_cond_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
+                    android:id="@+id/terms_and_cond"
+                    style="@style/profile_item"
+                    android:text="@string/terms_and_conditions" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end|center_vertical"
+                    android:layout_marginEnd="20dp"
+                    android:src="@drawable/ic_right_profile" />
+            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginStart="21dp"
-                android:layout_marginTop="21dp"
                 android:layout_marginEnd="21dp"
                 android:background="#eeeeee" />
 
-            <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:lineSpacingExtra="4sp"
-                android:paddingStart="21dp"
-                android:text="@string/terms_and_conditions"
-                android:textColor="#000000"
-                android:textSize="14sp" />
+            <LinearLayout
+                android:id="@+id/privacy_policy_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
+                    android:id="@+id/privacy_policy"
+                    style="@style/profile_item"
+                    android:text="@string/privacy_policy" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end|center_vertical"
+                    android:layout_marginEnd="20dp"
+                    android:src="@drawable/ic_right_profile" />
+            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginStart="21dp"
-                android:layout_marginTop="21dp"
                 android:layout_marginEnd="21dp"
                 android:background="#eeeeee" />
 
-            <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:lineSpacingExtra="4sp"
-                android:paddingStart="21dp"
-                android:text="@string/privacy_policy"
-                android:textColor="#000000"
-                android:textSize="14sp" />
+            <LinearLayout
+                android:id="@+id/about_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
+                    android:id="@+id/about"
+                    style="@style/profile_item"
+                    android:text="@string/about" />
+            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginStart="21dp"
-                android:layout_marginTop="21dp"
                 android:layout_marginEnd="21dp"
                 android:background="#eeeeee" />
 
-            <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:lineSpacingExtra="4sp"
-                android:paddingStart="21dp"
-                android:text="@string/about"
-                android:textColor="#000000"
-                android:textSize="14sp" />
+            <LinearLayout
+                android:id="@+id/rate_us_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
+                    android:id="@+id/rate_us"
+                    style="@style/profile_item"
+                    android:text="@string/rate_us" />
+            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginStart="21dp"
-                android:layout_marginTop="21dp"
                 android:layout_marginEnd="21dp"
                 android:background="#eeeeee" />
 
-            <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:lineSpacingExtra="4sp"
-                android:paddingStart="21dp"
-                android:text="@string/rate_us"
+            <LinearLayout
+                android:id="@+id/contact_us_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-                android:textColor="#000000"
-                android:textSize="14sp" />
+                <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
+                    android:id="@+id/contact_us"
+                    style="@style/profile_item"
+                    android:text="@string/contact_us" />
+            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginStart="21dp"
-                android:layout_marginTop="21dp"
                 android:layout_marginEnd="21dp"
                 android:background="#eeeeee" />
 
-            <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:lineSpacingExtra="4sp"
-                android:paddingStart="21dp"
-                android:text="@string/contact_us"
-                android:textColor="#000000"
-                android:textSize="14sp" />
-
-            <View
+            <LinearLayout
+                android:id="@+id/share_app_layout"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginStart="21dp"
-                android:layout_marginTop="21dp"
-                android:layout_marginEnd="21dp"
-                android:background="#eeeeee" />
+                android:layout_height="wrap_content">
 
-            <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:layout_marginBottom="40dp"
-                android:lineSpacingExtra="4sp"
-                android:paddingStart="21dp"
-                android:text="@string/share"
-                android:textColor="#000000"
-                android:textSize="14sp" />
+                <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
+                    android:id="@+id/share_app"
+                    style="@style/profile_item"
+                    android:text="@string/share" />
+
+            </LinearLayout>
+
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
