--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,6 +12,12 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
+        android:id="@+id/option_notification"
+        android:name="com.alfinapp.ui.home.notification.NotificationFragment"
+        android:label="@string/title_notification"
+        tools:layout="@layout/notification_fragment" />
+
+    <fragment
         android:id="@+id/navigation_contests"
         android:name="com.alfinapp.ui.home.contests.ContestFragment"
         android:label="@string/title_contest"
@@ -23,6 +29,7 @@
         android:label="@string/title_passbook"
         tools:layout="@layout/fragment_passbook" />
 
+
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.alfinapp.ui.home.profile.ProfileFragment"
@@ -30,10 +37,27 @@
         tools:layout="@layout/profile_fragment" />
 
     <fragment
-        android:id="@+id/option_notification"
-        android:name="com.alfinapp.ui.home.notification.NotificationFragment"
-        android:label="@string/title_notification"
-        tools:layout="@layout/notification_fragment" />
+        android:id="@+id/contact_us_fragment"
+        android:name="com.alfinapp.ui.contactUs.ContactUsFragment"
+        android:label="@string/contact_us"
+        tools:layout="@layout/contact_us_fragment" />
 
+    <fragment
+        android:id="@+id/about_fragment"
+        android:name="com.alfinapp.ui.aboutAlfin.AboutAlfinFragment"
+        android:label="@string/about"
+        tools:layout="@layout/fragment_about_alfin" />
+
+    <fragment
+        android:id="@+id/privacy_policy_fragment"
+        android:name="com.alfinapp.ui.privacyPolicy.PrivacyPolicyFragment"
+        android:label="@string/privacy_policy"
+        tools:layout="@layout/fragment_privacy_policy" />
+
+    <fragment
+        android:id="@+id/terms_and_cond_fragment"
+        android:name="com.alfinapp.ui.termsAndCondition.TermsAndCondiFragment"
+        android:label="@string/terms_and_conditions"
+        tools:layout="@layout/fragment_terms_and_condition" />
 
 </navigation>
