--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -8,29 +8,38 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="100dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="76dp"
-        android:gravity="center_horizontal"
         android:background="@drawable/welcome_message_bg"
+        android:gravity="center"
         android:orientation="vertical">
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="230dp">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/welcome_group">
 
-            <ImageView
-                android:layout_width="230dp"
-                android:layout_height="match_parent"
+
+            <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
+                android:id="@+id/welcome_to_alfin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:src="@drawable/welcome_group" />
+                android:text="@string/welcome_to_alfin"
+                android:layout_marginTop="40dp"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:id="@+id/coin_layout"
+                android:layout_width="wrap_content"
                 android:layout_height="?actionBarSize"
-                android:layout_centerInParent="true"
+                android:layout_below="@+id/welcome_to_alfin"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="30dp"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -52,11 +61,11 @@
             <com.alfinapp.ui.views.fontTextView.LatoItalicTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
+                android:layout_below="@+id/coin_layout"
                 android:layout_centerHorizontal="true"
                 android:layout_marginStart="41dp"
+                android:layout_marginTop="36dp"
                 android:layout_marginEnd="41dp"
-                android:layout_marginBottom="12dp"
                 android:gravity="center_horizontal"
                 android:text="@string/we_have_gifted_you"
                 android:textColor="#000000"
@@ -116,20 +125,10 @@
     <ImageView
         android:id="@+id/coins_image_view"
         android:layout_width="wrap_content"
-        android:layout_height="140dp"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:contentDescription="@string/welcome"
         android:src="@drawable/coins" />
-
-    <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
-        android:id="@+id/welcome_to_alfin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/coins_image_view"
-        android:layout_centerHorizontal="true"
-        android:text="@string/welcome_to_alfin"
-        android:textColor="@color/black"
-        android:textSize="18sp" />
 
 
 </RelativeLayout>
