--- a/app/src/main/res/layout/fragment_passbook.xml
+++ b/app/src/main/res/layout/fragment_passbook.xml
@@ -2,15 +2,59 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <include layout="@layout/collaptoolbar_layout" />
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/passbook_pager"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <com.alfinapp.ui.views.WrapContentHeightViewPager
+                android:id="@+id/passbook_pager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="26dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginBottom="36dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/passbook_tab_bg"
+                android:orientation="horizontal">
+
+                <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
+                    android:id="@+id/alfinCoin"
+                    style="@style/passbook_tab_select"
+                    android:text="Alfin Coins" />
+
+                <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
+                    android:id="@+id/transactionHistory"
+                    style="@style/passbook_tab_normal"
+                    android:layout_marginStart="28dp"
+                    android:text="Transaction History" />
+            </LinearLayout>
+
+            <fragment
+                android:id="@+id/passbook_fragment"
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:defaultNavHost="true"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                app:navGraph="@navigation/passbook_navigation" />
+
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
