--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#8de7e0</color>
-    <color name="colorPrimaryDark">#ffffff</color>
+    <color name="colorPrimaryDark">#44948C</color>
     <color name="colorAccent">#8de7e0</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
