--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="white">#FFFFFF</color>
 
     <color name="black_overlay">#66000000</color>
+    <color name="passbook_select_color">#dca202</color>
+    <color name="passbook_normal_color">#c6c6c6</color>
 </resources>
