--- a/app/src/main/res/layout/fragment_passbook.xml
+++ b/app/src/main/res/layout/fragment_passbook.xml
@@ -30,29 +30,36 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:background="@drawable/passbook_tab_bg"
+                android:background="@drawable/passbook_tab_normal_bg"
                 android:orientation="horizontal">
 
                 <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
                     android:id="@+id/alfinCoin"
                     style="@style/passbook_tab_select"
-                    android:text="Alfin Coins" />
+                    android:background="@drawable/passbook_tab_select_bg"
+                    android:text="Alfin Coins"
+                    android:textColor="#dca202" />
 
                 <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
                     android:id="@+id/transactionHistory"
                     style="@style/passbook_tab_normal"
                     android:layout_marginStart="28dp"
-                    android:text="Transaction History" />
+                    android:background="@drawable/passbook_tab_normal_bg"
+                    android:text="Transaction History"
+                    android:textColor="#c6c6c6" />
             </LinearLayout>
 
-            <fragment
-                android:id="@+id/passbook_fragment"
-                android:name="androidx.navigation.fragment.NavHostFragment"
+            <FrameLayout
+                android:id="@+id/passbook_navigation"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:defaultNavHost="true"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                app:navGraph="@navigation/passbook_navigation" />
+                android:layout_height="match_parent" />
+            <!-- <fragment
+                 android:id="@+id/passbook_nav_fragment"
+                 android:name="androidx.navigation.fragment.NavHostFragment"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 app:defaultNavHost="true"
+                 app:navGraph="@navigation/passbook_navigation" />-->
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
