--- a/app/src/main/res/layout/alfin_coin_fragment.xml
+++ b/app/src/main/res/layout/alfin_coin_fragment.xml
@@ -75,6 +75,7 @@
         android:layout_marginStart="21dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="26dp"
+        android:nestedScrollingEnabled="true"
         tools:listitem="@layout/listitem_alfin_coin_history" />
 
 </LinearLayout>
