--- a/app/src/main/res/layout/app_intro_fragment.xml
+++ b/app/src/main/res/layout/app_intro_fragment.xml
@@ -8,13 +8,12 @@
     <com.alfinapp.ui.views.fontTextView.LatoMediumTextView
         android:id="@+id/message1"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="31.5dp"
         android:layout_marginTop="49dp"
         android:layout_marginEnd="93.7dp"
         android:layout_marginBottom="22dp"
-        android:gravity="start|bottom"
-        android:lineHeight="14dp"
         android:text="@string/onboard_message_1"
         android:textColor="@color/black"
         android:textSize="26sp"
