--- a/app/src/main/res/layout/collaptoolbar_layout.xml
+++ b/app/src/main/res/layout/collaptoolbar_layout.xml
@@ -30,6 +30,8 @@
             android:layout_height="?attr/actionBarSize"
             android:layout_gravity="top"
             android:layout_marginBottom="48dp"
+            app:contentInsetLeft="0dp"
+            app:contentInsetStart="0dp"
             app:layout_collapseMode="pin"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
