--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,92 +33,226 @@
                 android:background="@drawable/home_bg"
                 android:orientation="vertical">
 
-                <androidx.cardview.widget.CardView
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="32.5dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="32.5dp"
-                    android:layout_marginBottom="24dp"
-                    android:elevation="4dp"
-                    app:cardCornerRadius="6dp">
+                    android:layout_height="wrap_content">
 
-                    <RelativeLayout
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/user_alfin_coin_layout"
                         android:layout_width="match_parent"
-                        android:layout_height="150dp"
-                        android:paddingTop="16dp">
-
-                        <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
-                            android:id="@+id/mesg_1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentStart="true"
-                            android:layout_marginStart="32dp"
-                            android:gravity="center_horizontal"
-                            android:text="@string/your_savings_naccount_balance"
-                            android:textColor="#d9000000"
-                            android:textSize="12sp" />
-
-
-                        <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
-                            android:id="@+id/mesg_2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:layout_marginEnd="32dp"
-                            android:gravity="center_horizontal"
-                            android:text="@string/your_alfin_coins"
-                            android:textColor="#d9000000"
-                            android:textSize="12sp"
-                            tools:ignore="RelativeOverlap" />
-
-                        <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/mesg_1"
-                            android:layout_marginStart="34.5dp"
-                            android:layout_marginTop="12dp"
-                            android:text="@string/rs_50_000"
-                            android:textColor="#000000"
-                            android:textSize="18sp" />
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="32.5dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="32.5dp"
+                        android:layout_marginBottom="24dp"
+                        android:elevation="4dp"
+                        android:visibility="visible"
+                        app:cardCornerRadius="6dp">
 
                         <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="150dp"
+                            android:paddingTop="16dp">
 
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/mesg_2"
-                            android:layout_alignParentEnd="true"
-                            android:layout_marginTop="12dp"
-                            android:layout_marginEnd="41dp"
-                            android:gravity="center">
-
-                            <ImageView
-                                android:layout_width="50dp"
-                                android:layout_height="50dp"
-                                android:layout_centerHorizontal="true"
-                                android:contentDescription="@string/content_desc"
-                                app:srcCompat="@drawable/ic_coin_bg" />
-
-                            <com.alfinapp.ui.views.fontTextView.LatoBlackTextView
+                            <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
+                                android:id="@+id/mesg_1"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:letterSpacing="0.02"
-                                android:text="@string/_1000"
-                                android:textColor="#806103"
-                                android:textSize="30sp" />
-                        </RelativeLayout>
+                                android:layout_alignParentStart="true"
+                                android:layout_marginStart="32dp"
+                                android:gravity="center_horizontal"
+                                android:text="@string/your_savings_naccount_balance"
+                                android:textColor="#d9000000"
+                                android:textSize="12sp" />
 
-                        <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
-                            android:layout_width="wrap_content"
+
+                            <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
+                                android:id="@+id/mesg_2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:layout_marginEnd="32dp"
+                                android:gravity="center_horizontal"
+                                android:text="@string/your_alfin_coins"
+                                android:textColor="#d9000000"
+                                android:textSize="12sp"
+                                tools:ignore="RelativeOverlap" />
+
+                            <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/mesg_1"
+                                android:layout_marginStart="34.5dp"
+                                android:layout_marginTop="12dp"
+                                android:text="@string/rs_50_000"
+                                android:textColor="#000000"
+                                android:textSize="18sp" />
+
+                            <RelativeLayout
+
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/mesg_2"
+                                android:layout_alignParentEnd="true"
+                                android:layout_marginTop="12dp"
+                                android:layout_marginEnd="41dp"
+                                android:gravity="center">
+
+                                <ImageView
+                                    android:layout_width="50dp"
+                                    android:layout_height="50dp"
+                                    android:layout_centerHorizontal="true"
+                                    android:contentDescription="@string/content_desc"
+                                    app:srcCompat="@drawable/ic_coin_bg" />
+
+                                <com.alfinapp.ui.views.fontTextView.LatoBlackTextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:letterSpacing="0.02"
+                                    android:text="@string/_1000"
+                                    android:textColor="#806103"
+                                    android:textSize="30sp" />
+                            </RelativeLayout>
+
+                            <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentBottom="true"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginBottom="16.6dp"
+                                android:text="@string/every_rs_1000_earn_you_15_alfin_coins"
+                                android:textColor="#888888"
+                                android:textSize="12sp" />
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/sms_permission_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginBottom="24dp"
+                        android:elevation="4dp"
+                        android:visibility="gone"
+                        app:cardBackgroundColor="#df5555"
+                        app:cardCornerRadius="6dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentBottom="true"
-                            android:layout_centerHorizontal="true"
-                            android:layout_marginBottom="16.6dp"
-                            android:text="@string/every_rs_1000_earn_you_15_alfin_coins"
-                            android:textColor="#888888"
-                            android:textSize="12sp" />
-                    </RelativeLayout>
-                </androidx.cardview.widget.CardView>
+                            android:orientation="vertical">
+
+                            <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="18dp"
+                                android:layout_marginTop="12dp"
+                                android:layout_marginEnd="18dp"
+                                android:gravity="center_horizontal"
+                                android:text="We dont have access to your SMS so you cannot earn Alfin coins on your account balance, Give access and earn Alfin coins."
+                                android:textColor="#ffffff"
+                                android:textSize="12sp" />
+
+                            <com.alfinapp.ui.views.fontTextView.LatoHeavyTextView
+                                android:id="@+id/bid_now_text_view"
+                                android:layout_width="wrap_content"
+                                android:layout_height="48dp"
+                                android:layout_gravity="center_horizontal"
+                                android:layout_marginTop="12dp"
+                                android:layout_marginBottom="18dp"
+                                android:background="@drawable/app_button_white_bg"
+                                android:gravity="center"
+                                android:letterSpacing="0.03"
+                                android:padding="12dp"
+                                android:paddingStart="45dp"
+                                android:paddingTop="12dp"
+                                android:paddingEnd="45dp"
+                                android:paddingBottom="12dp"
+                                android:text="GIVE ACCESS"
+                                android:textColor="#000000"
+                                android:textSize="14sp" />
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/last_day_earn_coin_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginBottom="24dp"
+                        android:elevation="4dp"
+                        android:visibility="gone"
+                        app:cardBackgroundColor="#f8bc18"
+                        app:cardCornerRadius="6dp">
+
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="140dp"
+                            android:orientation="vertical">
+
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:layout_centerInParent="true"
+                                android:contentDescription="@string/content_desc"
+                                android:src="@drawable/earn_coin_group" />
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical">
+
+
+                                <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="8dp"
+                                    android:gravity="center_horizontal"
+                                    android:text="You earned"
+                                    android:textColor="#000000"
+                                    android:textSize="12sp" />
+
+                                <View
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="0dp"
+                                    android:layout_weight="1" />
+
+                                <com.alfinapp.ui.views.fontTextView.LatoBlackTextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_horizontal"
+                                    android:layout_marginTop="16dp"
+                                    android:layout_marginEnd="48dp"
+                                    android:text="20"
+                                    android:textColor="#000000"
+                                    android:textSize="25sp" />
+
+                                <View
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="0dp"
+                                    android:layout_weight="1" />
+
+                                <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginBottom="12dp"
+                                    android:gravity="center_horizontal"
+                                    android:textColor="#000000"
+                                    android:textSize="12sp"
+                                    tools:text="This is your daily earning based on your balance \nmaintained yesterday" />
+
+                            </LinearLayout>
+
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+                </RelativeLayout>
+
 
                 <View
                     android:layout_width="match_parent"
