--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -71,7 +71,7 @@
                 android:textSize="14sp" />
 
             <EditText
-                android:id="@+id/username"
+                android:id="@+id/phone_number_edittext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
