--- a/app/src/main/res/layout/home_toolbar_layout.xml
+++ b/app/src/main/res/layout/home_toolbar_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="?actionBarSize"
@@ -7,7 +8,9 @@
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:contentInsetEnd="0dp"
+        app:contentInsetStart="0dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -18,6 +21,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_centerVertical="true"
+                android:layout_marginStart="20dp"
                 android:contentDescription="@string/content_desc"
                 android:src="@drawable/ic_launcher_foreground" />
 
@@ -35,11 +39,12 @@
 
             <ImageView
                 android:id="@+id/toolbar_notification"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="20dp"
+                android:layout_marginEnd="10dp"
+                android:padding="16dp"
                 android:src="@drawable/ic_top_notification"
                 android:text="Edit"
                 android:textColor="#23a1ff"
