--- a/app/src/main/res/layout/pageritem_home.xml
+++ b/app/src/main/res/layout/pageritem_home.xml
@@ -21,16 +21,6 @@
             android:textColor="#000000"
             android:textSize="14sp" />
 
-        <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="14dp"
-            android:gravity="center_horizontal"
-            android:lineSpacingExtra="2sp"
-            android:text="LG Washing Machine 20L Semi\n Automatic worth Rs 12000"
-            android:textColor="#000000"
-            android:textSize="12sp" />
-
         <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -41,6 +31,7 @@
             android:textSize="12sp" />
 
         <com.alfinapp.ui.views.fontTextView.LatoHeavyTextView
+            android:id="@+id/bid_now_text_view"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginStart="45dp"
@@ -53,6 +44,16 @@
             android:text="BID NOW"
             android:textColor="#ffffff"
             android:textSize="14sp" />
+
+        <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="14dp"
+            android:gravity="center_horizontal"
+            android:lineSpacingExtra="2sp"
+            android:text="LG Washing Machine 20L Semi\n Automatic worth Rs 12000"
+            android:textColor="#000000"
+            android:textSize="12sp" />
 
         <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
             android:layout_width="wrap_content"
