--- a/app/src/main/res/layout/transaction_history_fragment.xml
+++ b/app/src/main/res/layout/transaction_history_fragment.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/transactionHistoryRecyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/transactionHistoryRecyclerView"
+    android:nestedScrollingEnabled="true"
     android:paddingStart="22dp"
     android:paddingTop="38dp"
     android:paddingEnd="16dp"
