api integration signup validate otp resend otp get user

--- a/app/src/main/res/layout/fragment_otp_verify.xml
+++ b/app/src/main/res/layout/fragment_otp_verify.xml
@@ -39,14 +39,14 @@
         android:layout_marginTop="88.5dp"
         android:layout_marginEnd="102.6dp"
         android:focusable="true"
-        android:fontFamily="monospace"
+        android:fontFamily="@font/latoregular"
         android:gravity="center"
         android:inputType="number"
-        android:text="123456"
         android:textColor="@color/black"
         android:textSize="14sp"
         app:itemCount="6"
-        app:itemWidth="20dp"
+        app:itemHeight="24dp"
+        app:itemWidth="24dp"
         app:lineColor="#f3b815"
         app:viewType="line"
         tools:ignore="HardcodedText" />
